# pydto

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  justfile  pyproject.toml  pyrightconfig.json
src/pydto/: pydantic_v2.py
tests/: test_pydantic_v2.py
